--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId><![CDATA[org.example"><img src=x onerror=alert(1)>]]></groupId>
+    <groupId>org.example</groupId>
     <artifactId>untitled4</artifactId>
     <version>1.0-SNAPSHOT</version>
 
